--- a/ToDoList/src/Components/Tag.css
+++ b/ToDoList/src/Components/Tag.css
@@ -1,10 +1,11 @@
 .tag {
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 600;
   background-color: #f9f9f9;
-  border: 1px solid #dfe3e6;
+  border: none;
+  color: #0f0f5f;
   border-radius: 5px;
-  padding: 2px 10px;
+  padding: 4px 10px;
   margin-right: 10px;
   cursor: pointer;
 }
