--- a/ToDoList/src/Components/TaskCard.css
+++ b/ToDoList/src/Components/TaskCard.css
@@ -1,41 +1,50 @@
-.task_card{
-    width: 100%;
-    min-height: 100px;
-    border: 1px solid #dcdcdc;
-    border-radius: 5px;
-    padding: 15px;
-    margin: 15px 0;
+.task_card {
+  width: 100%;
+  min-height: 100px;
+  border: 1px solid #dcdcdc;
+  border-radius: 5px;
+  padding: 15px;
+  margin: 15px 0;
 }
-.task_card_bottom_line{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.task_card_bottom_line {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.task_text{
-    font-size: 18px;
-    font-weight: 600;
-    margin-bottom: 15px;
+.task_text {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 15px;
+  width: 60%;
+  overflow: auto;
 }
-.task_delete{
-    width: 35px;
-    height: 35px;
-    border-radius: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-}
-
-.task_delete:hover{
-    background-color: #ebebeb;
+.task_delete {
+  width: 35px;
+  height: 35px;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
 
-.delete_icon{
-    width: 20px;
-    opacity: 50%;
-    transition: all 0.3 ease-in-out;
+.task_delete:hover {
+  background-color: #ebebeb;
 }
-.task_delete:hover .delete_icon{
-    opacity: 80%;
+
+.delete_icon {
+  width: 20px;
+  opacity: 50%;
+  transition: all 0.3 ease-in-out;
+}
+.task_delete:hover .delete_icon {
+  opacity: 80%;
+}
+.change_status {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  position: relative;
+  top: -2rem;
 }
